@@ -10,6 +10,11 @@
 	* test/unittest/drops/drp.DTRACEDROP.STKSTROVERFLOW.d: Check that
 	the process is ours.
 
+	* runtest.sh: .x files now return 0 (test), 1 (XFAIL) or 2 (skip).
+	* test/unittest/buffering/tst.resize1.x: New, skip if loadavg > 10.
+	* test/unittest/buffering/tst.resize2.x: Likewise.
+	* test/unittest/buffering/tst.resize3.x: Likewise.
+
 2012-02-09  Nick Alcock  <nick.alcock@oracle.com>
 
 	* uts/common/sys/dtrace.h (DTRACEOPT_QUIETRESIZE): New.
